[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis-reviews"
version = "0.1.0"
description = "IMDb review sentiment analysis course project."
requires-python = ">=3.9"
dependencies = [
    "joblib",
    "lightgbm",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "tokenizers",
    "tqdm",
    "xgboost",
]

[project.optional-dependencies]
mlx = ["mlx"]
cuda = ["torch"]
pretrained = ["torch", "transformers>=4.44,<5", "sentencepiece", "protobuf"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["classifiers*", "src*"]
